Displacement in compositing creates holes #41440

Closed
opened 2014-08-14 16:03:25 +02:00 by Filip Sauer · 7 comments

System Information
Operating system and graphics card
Windows 7 64 bit, GeForce GTX 285, also tried with AMD Radeon HD 6500M/5600/5700 Series

Blender Version
broken - official 2.72 and probably even before it

Short description of error
When applying displacement with higher values it creates small holes in the displaced image. The more the displacement, the more holes appear.

Exact steps for others to reproduce the error
Open the attached blend file and see the result of the simple composite.
displace_BUG.blend

**System Information** Operating system and graphics card Windows 7 64 bit, GeForce GTX 285, also tried with AMD Radeon HD 6500M/5600/5700 Series **Blender Version** broken - official 2.72 and probably even before it **Short description of error** When applying displacement with higher values it creates small holes in the displaced image. The more the displacement, the more holes appear. **Exact steps for others to reproduce the error** Open the attached blend file and see the result of the simple composite. [displace_BUG.blend](https://archive.blender.org/developer/F103441/displace_BUG.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @cdog

Added subscriber: @cdog

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

Me or maybe @LukasTonne will have a look soon.

Me or maybe @LukasTonne will have a look soon.

This issue was referenced by afa3469288

This issue was referenced by afa3469288337079cbff2bcecb7142448e961393

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit afa3469288.

Closed by commit afa3469288.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41440
No description provided.